<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarPelicula">

    <Spinner
        android:id="@+id/lista"
        android:layout_width="228dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/puntuacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <EditText
        android:id="@+id/nombrePelicula"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Nombre Pelicula"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/nombrePelicula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Genero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/puntuacion"
        app:layout_constraintEnd_toStartOf="@+id/lista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lista"
        app:layout_constraintVertical_bias="0.0" />

    <RatingBar
        android:id="@+id/puntuacion"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:numStars="5"
        android:rating="3.5"
        app:layout_constraintBottom_toTopOf="@+id/comentario"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/comentario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Comentario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/puntuacion"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/puntuacion"
        app:layout_constraintEnd_toStartOf="@+id/puntuacion"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/puntuacion"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="Fecha"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/anio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/hora"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="Hora"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fecha"
        app:layout_constraintTop_toTopOf="@+id/fecha"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/anio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="Año de estreno"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="registrar"
        android:text="Registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="116dp"
        android:layout_height="121dp"
        android:layout_marginEnd="28dp"
        android:onClick="cambiarImagen"
        app:layout_constraintBottom_toBottomOf="@+id/anio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/anio"
        app:layout_constraintTop_toTopOf="@+id/anio"
        app:layout_constraintVertical_bias="0.46"
        app:srcCompat="@drawable/ic_launcher_background" />

</androidx.constraintlayout.widget.ConstraintLayout>